# routes/swagger.js
@@ -1,0 +1,8 @@
+/* eslint-disable no-undef */
+const router = require('express').Router();
+const swaggerUi = require('swagger-ui-express');
+const swaggerDocument = require('../swagger-output.json');
+router.use('/api-docs', swaggerUi.serve);
+router.get('/api-docs', swaggerUi.setup(swaggerDocument));
+
+module.exports = router;
